# smpl-cpp

./: CMakeLists.txt  README.md
src/: Smpl.cpp  main.cpp
src/header/: Smpl.h
